# simple-oracle-mcp

./: .dockerignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  uv-setup.sh
.github/workflows/: docker-build-push.yml
config/: __init__.py  exceptions.py  loader.py  models.py  security.py  sources.py
docs/: AI_AGENT_INTEGRATION.md  DEPLOYMENT.md  IDE_CONFIGURATIONS.md  SECURITY.md  kiro-mcp-docker-config.json
docs/config-templates/: claude-desktop-config.json  continue-config.json  cursor-mcp-config.json  kiro-mcp-config.json  vscode-settings.json
monitoring/: prometheus.yml
tests/: __init__.py  test_config_infrastructure.py  test_connection.py  test_integration_docker_deployment.py  test_integration_end_to_end.py  test_integration_mcp_clients.py  test_main.py  test_property_config_precedence.py  test_property_configuration_preservation_fastmcp.py  test_property_credential_masking.py  test_property_credential_validation.py  test_property_database_config_usage.py  test_property_environment_parameter_loading.py  test_property_error_handling_consistency.py  test_property_error_source_identification.py  test_property_fallback_configuration_behavior.py  test_property_functional_equivalence_preservation.py  test_property_import_migration_completeness.py  test_property_logging_preservation.py  test_property_mcp_config_only_operation.py  test_property_missing_parameter_error.py  test_property_parameter_validation_consistency.py  test_property_performance_maintenance.py  test_property_protocol_compatibility_preservation.py  test_property_secure_error_messages.py  test_property_security_feature_preservation.py  test_property_security_feature_preservation_fastmcp.py  test_property_security_parameter_validation_startup.py  test_property_server_identity_consistency.py  test_property_structured_error_logging.py
tests/test_configs/: kiro_mcp_configs.py  vscode_mcp_configs.py
